添加完整的多端口测试工具集
主要添加：
1. test-multiple-nodes.bat/sh - 交互式多节点启动器
2. quick-test.bat/sh - 快速启动3个节点进行测试
3. TESTING_GUIDE.md - 详细的测试指南和场景
4. 更新README.md - 添加P2P测试说明

测试功能：
- 支持CLI和GUI两种模式的多端口启动
- 自动连接节点形成P2P网络
- 提供详细的测试场景和命令
- 包含故障排除和性能测试指导
- 支持自定义端口和连接配置

用户现在可以轻松测试P2P聊天的完整功能